--- a/etc/httpd/conf/httpd.conf
+++ b/etc/httpd/conf/httpd.conf
@@ -162,7 +162,7 @@ DocumentRoot "/var/www/html"
 # is requested.
 #
 <IfModule dir_module>
-    DirectoryIndex index.shtml
+    DirectoryIndex index.html
 </IfModule>
 
 #
